# medical-compliance-rag

./: .gitignore  DEPLOYMENT.md  README.md  README_DEPLOYMENT.md  STATUS.md  app.py  app_demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  eval.yml
.streamlit/: secrets.toml.example
data/audit/: query_logs.jsonl
data/eval/: eval_set.json
data/governance/: compliance_report_20260207.json  document_registry.json  users.json
data/processed/: employee_analyses.json  employee_profiles.json  evaluation_results.json  organizational_insights.json  sample_learning_path.json  sample_quiz.json  synthetic_documentation_training.json  synthetic_edge_cases.json  synthetic_hipaa.json  synthetic_infection_control.json  synthetic_medical_waste.json  synthetic_osha.json
docs/: ARCHITECTURE.md  phase1_summary.md  phase2_summary.md  phase3_summary.md  phase4_summary.md  phase5_summary.md
reports/: eval_2026-06-01.json  eval_2026-06-01.md
scripts/: check_data.py  check_eval_gate.py  create_auth_config.py  ingest.py  merge_qa_batches.py  pdf_processor.py  run_eval.py  scraper.py
src/: access_control.py  audit_logger.py  chunker.py  compliance_dashboard.py  dashboard_summary.py  document_registry.py  employee_profiles.py  evaluate.py  interactive.py  personalized_learning.py  rag_system.py  skill_gap_analyzer.py  vector_store.py
src/medcomply/: access_control.py  audit_logger.py  auth.py  chunker.py  eval_retrieval.py  (+13 more)
tests/: test_chunker.py  test_import.py  test_phase3.py  test_phase4.py  test_phase7.py  test_phase8.py  test_phase9.py
