[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medcomply"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # current runtime deps
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "ollama>=0.3",
    "tiktoken>=0.7",
    "streamlit>=1.35",
    "plotly>=5.22",
    "pandas>=2.2",
    "pydantic>=2.7",
    # target stack (wired in later phases)
    "qdrant-client>=1.9",
    "fastembed>=0.3",
    "llama-index-core>=0.10",
    "streamlit-authenticator>=0.3",
    "groq>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medcomply"]

[tool.ruff]
line-length = 100
src = ["src"]
exclude = ["src/*.py", "scripts/", "app_demo.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    # Pre-existing modules not yet targeted by any phase
    "*/medcomply/access_control.py",
    "*/medcomply/compliance_dashboard.py",
    "*/medcomply/dashboard_summary.py",
    "*/medcomply/document_registry.py",
    "*/medcomply/employee_profiles.py",
    "*/medcomply/evaluate.py",
    "*/medcomply/interactive.py",
    "*/medcomply/personalized_learning.py",
    "*/medcomply/skill_gap_analyzer.py",
]
